--- a/17_05_15.org
+++ b/17_05_15.org
@@ -9,7 +9,6 @@
 - replaced (Foo.) with (new Foo)
 
 ** DONE delete type hints
-   CLOCK: [2015-05-16 Sat 12:01]
    CLOCK: [2015-05-16 Sat 11:55]--[2015-05-16 Sat 12:01] =>  0:06
    CLOCK: [2015-05-15 Fri 23:53]--[2015-05-15 Fri 23:53] =>  0:00
    CLOCK: [2015-05-15 Fri 21:11]--[2015-05-15 Fri 23:21] =>  2:10
@@ -45,7 +44,7 @@
 
 ** TODO Survey other JVM languages
 
-* Gradual Typing [1/1]
+* DONE Gradual Typing [1/1]
    DEADLINE: <2015-05-19 Tue 21:00>
 
 ** DONE survey for imported polymorphic functions in core.typed
@@ -53,4 +52,19 @@ https://gist.github.com/frenchy64/68cf57c0b7200bc9173d
 - found 3 functions on all of github
   - 2 are probably bogus
 
-* TODO Push gradual typing plan
+* DONE Push gradual typing plan
+  CLOCK: [2015-05-17 Sun 07:45]--[2015-05-17 Sun 07:47] =>  0:02
+- only thing new is code from meeting
+
+* Campaign [0/1]
+
+** TODO blog post on REPL
+   CLOCK: [2015-05-17 Sun 07:50]
+- need to fix REPL in branch first
+  - need to recurse into 'do' expressions
+- don't want to break typed special forms
+  - idea: track whether a do expression is a special form
+    as you analyze it
+    - ie. `(do ::t/special-form ...)` might be special, remember that...
+- can we reuse c.c.t.check.do?
+  - not really, takes an AST, I want a function that takes Clojure syntax
