--- a/21_05_15.org
+++ b/21_05_15.org
@@ -16,12 +16,7 @@
 
 ** TODO Survey other JVM languages
 
-* DONE Gradual Typing [1/1]
-   DEADLINE: <2015-05-19 Tue 21:00>
-
-* Campaign [1/3]
-
-** TODO monkey patch load in require
+* Campaign [1/2]
 ** TODO blog post on REPL
 - need to fix REPL in branch first
   - need to recurse into 'do' expressions
@@ -42,24 +37,50 @@
   need more digging for untyped gradual polymorphic things
   - better sampling
 
-* TODO POPL Paper [0/2]
+* TODO POPL Paper [3/5]
   DEADLINE: <2015-05-21 Thu>
-** TODO combined type-check rewrite relation
+** DONE combined type-check rewrite relation
    DEADLINE: <2015-05-20 Wed>
   takes expression
   Env exp -> type -> exp
   - added hybrid checking-rewrite judgement
   - updated everything but Java rules
-  - need to
-    - add back T-{Method,New,Field}
-      - should rewrite from reflective to nonreflective
-      - don't need reflective to reflective rule, since illtyped
-    - check that T-{Method,New,Field}Static still make sense
+
+
+** DONE add back T-{Method,New,Field}
+  - should rewrite from reflective to nonreflective
+  - don't need reflective to reflective rule, since illtyped
+** DONE check that T-{Method,New,Field}Static still make sense
+
+** TODO implement Resolve{Field,New,Method}
+
 ** TODO Update proof
 
 * TODO Gradual typing Plan
   - lay out all challenges
   - skeleton for paper
 
-* TODO require/load finish
+* DONE require/load finish
   DEADLINE: <2015-05-21 Thu>
+
+* DONE Fix CTYP-218
+
+* TODO define an eval-fn in check-form-common for nREPL
+  DEADLINE: <2015-05-21 Thu>
+
+* TODO Implement :load-file nREPL packet
+
+* TODO Update B-Field etc.
+* Implement metafunctions
+* Update theorem to use new judgement
+e rewrites to e'
+
+* Typed Clojure code
+  - how much using various features
+  - collection of repositories
+    - decide on corpus
+    - eg. how often do they call java methods?
+    - how often do they specify a Java method is nullable
+    - HMaps in more code?
+    - how many multimethods
+  - ask on twitter
